<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".Activities.ProductDetails">
  <ImageButton
      android:id="@+id/backButton"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginTop="35dp"
      android:layout_marginStart="20dp"
      android:scaleType="centerInside"
      android:background="@drawable/background_item"
      android:src="@drawable/left_arrow"
      android:tint="@color/dark"
      android:layout_alignParentStart="true"
      android:contentDescription="@string/cartbutton" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/scrollView"
      android:overScrollMode="never"
      android:layout_marginBottom="65dp"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:orientation="vertical">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/imageViewPager"
            android:layout_width="match_parent"
            android:layout_height="500dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="vertical">
          <com.google.android.material.tabs.TabLayout
              android:id="@+id/tabDots"
              android:layout_width="match_parent"
              android:background="#00FFFFFF"
              android:layout_height="wrap_content"
              app:tabBackground="@drawable/tab_selector"
              app:tabGravity="center"
              app:tabIndicatorHeight="0dp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="70dp"
              android:background="@drawable/round_top_corners"
              android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
              <TextView
                  android:id="@+id/product_price"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/tsh_00_000"
                  android:textStyle="bold"
                  android:layout_centerVertical="true"
                  android:fontFamily="@font/gabriel_sans_bold"
                  android:textColor="@color/dark"
                  android:paddingHorizontal="20dp"
                  android:textSize="21sp"/>
            </RelativeLayout>


            <RelativeLayout
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:orientation="vertical">
                <TextView
                    android:id="@+id/shippingPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tsh_00_000"
                    android:textStyle="bold"
                    android:fontFamily="@font/gabriel_sans_normal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shiping_cost"
                    android:textStyle="bold"
                    android:fontFamily="@font/gabriel_sans_normal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    />
              </LinearLayout>
            </RelativeLayout>






          </LinearLayout>


        </LinearLayout>

      </RelativeLayout>
    <TextView
      android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
      android:text="@string/product_name"
        android:paddingHorizontal="20dp"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginHorizontal="20dp"
          android:layout_marginVertical="15dp"
          android:background="@color/light_200"/>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_marginTop="5dp"
          android:layout_height="wrap_content">
        <View
            android:id="@+id/color_shape"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
          android:background="@drawable/color_shape"/>

        <TextView
            android:id="@+id/color_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/color"
            android:paddingHorizontal="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:orientation="horizontal"
            android:layout_marginEnd="20dp"
          android:layout_alignParentEnd="true">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/brand"
              android:textColor="@android:color/darker_gray"
              android:layout_marginTop="5dp"/>
          <TextView
              android:id="@+id/product_brand"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/dark"
              android:layout_marginTop="5dp"
              android:textStyle="bold"
              android:text="NIKE"/>
        </LinearLayout>








      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginHorizontal="20dp"
          android:layout_marginVertical="15dp"
          android:background="@color/light_200"/>



      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:id="@+id/card"
            android:layout_height="wrap_content">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:textColor="@color/dark"
              android:layout_marginTop="8dp"
              android:textStyle="bold"
              android:text="@string/product_details"
              android:paddingHorizontal="20dp"/>

          <ImageView
              android:id="@+id/expand_details"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/down_arrow"
              android:layout_alignParentEnd="true"
              android:padding="7dp"
              android:scaleType="centerInside"
              android:background="@drawable/icon_round"
              android:layout_marginEnd="20dp"
              app:tint="@color/darkgreen" />



        </RelativeLayout>



        <TextView
            android:id="@+id/hidden_delivery_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:textSize="17sp"
            android:layout_below="@+id/card"
            android:layout_marginTop="5dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/darker_gray"
            android:visibility="gone"/>

      </RelativeLayout>


      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginHorizontal="20dp"
          android:layout_marginVertical="15dp"
          android:background="@color/light_200"/>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:id="@+id/card2"
            android:layout_height="wrap_content">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:textColor="@color/dark"
              android:layout_marginTop="8dp"
              android:textStyle="bold"
              android:text="@string/delivery_return_info"
              android:paddingHorizontal="20dp"/>

          <ImageView
              android:id="@+id/expand_info"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/down_arrow"
              android:layout_alignParentEnd="true"
              android:padding="7dp"
              android:scaleType="centerInside"
              android:layout_marginEnd="20dp"
              android:background="@drawable/icon_round"
              app:tint="@color/darkgreen" />



        </RelativeLayout>

        <TextView
            android:id="@+id/delivery_return_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:textSize="17sp"
            android:layout_below="@+id/card2"
            android:layout_marginTop="5dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/darker_gray"
            android:visibility="gone"/>
      </RelativeLayout>



    </LinearLayout>
  </ScrollView>



  <Button
      android:id="@+id/addToCart"
      android:paddingHorizontal="20dp"
      android:gravity="center"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:layout_width="wrap_content"
      android:layout_height="40dp"
      android:clickable="true"
      android:drawablePadding="20dp"
      android:layout_marginBottom="20dp"
    android:background="@drawable/button_shape"
    android:textColor="@color/white"
    android:text="@string/add_to_cart"
      android:focusable="true" />






  </RelativeLayout>